--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,21 +12,17 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # PDF
   flutter_pdfview: ^1.3.2
-  
-  # File picker - обновленная версия
   file_picker: ^8.0.0+1
-  
-  # Storage
   shared_preferences: ^2.2.2
   path_provider: ^2.1.1
-  
-  # State management
   provider: ^6.1.1
-  
-  # UI
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.2.1
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
@@ -35,3 +31,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
